--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".lifecircle.LifeCircleActivity"></activity>
+        <activity android:name=".multisection.MultiSectionActivity"></activity>
+        <activity android:name=".lifecircle.LifeCircleActivity" />
         <activity android:name=".livedata.LiveDataActivity" />
         <activity android:name=".databinding.RecyclerDataActivity" />
         <activity android:name=".databinding.DataActivity" />
